# jsonic-editor

./: .gitignore  CHECKLIST-COMPLETION-ANALYSIS-15sep2025-05am.md  CHECKLIST-IMPLEMENTATION-30jun2025-18h20.md  CHECKLIST.md  CLAUDE.md  LICENSE  README.md  eslint.config.cjs  index.html  jsonic-claudeglm-18sep2025-20h00.roo.log.txt  jsonic-claudeglm-18sep2025-23h00.roo.log.txt  jsonic-editor-claudecode-glm4.5-15sep2025-20h30-fix.txt  package-lock.json  package.json  test-data.json  tsconfig.json  vite.config.ts
docs/: architecture-clean.mmd
docs/ARCHITECTURE/: architecture-20251231-021822.md  architecture-20260105-212546.md  architecture-20260429-161127Z-jsonic-core.md  architecture-jsonic-20251231-012346Z.md
docs/CHECKLISTS/: checklist-graph-enhancements-20251231-021822.md  (+2 more)
jsonic/: CREATED_FILES.md  DEVELOPMENT_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  LICENSE  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  SUMMARY.md  TECHNICAL_SPEC.md  TODO.md  package.json  tsconfig.json  webpack.config.js
jsonic-deepsite/: index.html
jsonic/src/: App.tsx  index.html  (+1 more)
jsonic/src-tauri/: Cargo.toml  tauri.conf.json
jsonic/src-tauri/src/: commands.rs  file_handler.rs  json_comments.rs  main.rs  tests.rs
src/: App-canvas.css  App-debug.js  App-debug.tsx  App-demo.js  App-demo.tsx  App-minimal.js  App-minimal.tsx  App-new.js  App-new.tsx  App-test-imports.tsx  App-ultra-minimal.tsx  App.css  App.js  App.tsx  main-minimal.js  main-minimal.tsx  main-test-functionality.tsx  main-test-imports.tsx  main-ultra-minimal.tsx  main.js  main.tsx  test-functionality.tsx
(+194 files in other folders)
