[package]
name = "jsonic"
version = "0.1.0"
description = "A Tauri-based JSON editor with concept map visualization"
authors = ["Robin L. M. Cheung"]
license = "All rights reserved"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "shell-open"] }
jsonc-parser = { version = "0.28.0", features = ["serde", "cst"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
